<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="LoginViewModel"
            type="vn.nhattamsoft.project_mau.viewmodels.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/logo" />

                <TextView
                    android:id="@+id/hethong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/hethongstring"
                    android:textAlignment="center"
                    android:textColor="@color/logincolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dangnhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hethong"
                    android:text="@string/dangnhapbdstring"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dangnhap"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutTK"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:endIconMode="clear_text"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/circleuser"
                        app:startIconTint="@color/logincolor2"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/taikhoan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/taikhoan"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:padding="0dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutMK"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/lock"
                        android:layout_marginTop="8dp"
                        app:startIconTint="@color/logincolor2"
                        app:endIconMode="password_toggle"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/matkhau"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/matkhau"
                            android:inputType="textPassword"
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:padding="0dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutTinh"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/location"
                        android:layout_marginTop="8dp"
                        app:startIconTint="@color/logincolor2">

                        <AutoCompleteTextView
                            android:id="@+id/tinh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tinh"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:padding="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNam"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextTextColor="@color/red"
                        android:layout_marginTop="8dp"
                        app:startIconDrawable="@drawable/calendar"
                        app:startIconTint="@color/logincolor2">

                        <AutoCompleteTextView
                            android:id="@+id/nam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nam"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:padding="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_below="@+id/input"
                    >
                    <CheckBox
                        android:id="@+id/checkGhiNho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/checkGhiNho"
                        android:text="@string/ghinho" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quenmk"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:textColor="@color/logincolor"/>

                </RelativeLayout>
                <Button
                    android:id="@+id/btnDangNhap"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/logincolor"
                    android:text="@string/dangnhap"
                    android:textAllCaps="false"
                    android:layout_below="@+id/rl"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    />
                <RelativeLayout
                    android:id="@+id/tt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_below="@+id/btnDangNhap"
                    >

                    <View
                        android:layout_width="90dp"
                        android:layout_height="1dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/thongtinlh"
                        android:textAlignment="center"
                        />
                    <View
                        android:layout_width="90dp"
                        android:layout_height="1dp"
                        android:background="@color/gray"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tt"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">
                    <ImageView
                        android:id="@+id/icondt"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:background="@drawable/phone"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#38558e"
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dienthoai"
                        android:textColor="#232323"
                        android:layout_toEndOf="@+id/icondt"
                        android:textSize="13sp"
                        android:layout_marginLeft="8dp"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp">
                    <ImageView
                        android:id="@+id/iconemail"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:background="@drawable/email"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#38558e"
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#232323"
                        android:layout_toEndOf="@+id/iconemail"
                        android:textSize="13sp"
                        android:layout_marginLeft="8dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp">
                    <ImageView
                        android:id="@+id/iconweb"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:background="@drawable/web"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="#38558e"
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/web"
                        android:textColor="#232323"
                        android:layout_toEndOf="@+id/iconweb"
                        android:textSize="13sp"
                        android:layout_marginLeft="8dp"

                        />

                </RelativeLayout>
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>
